# wikinow

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_cli.py  test_config.py  test_db.py  test_export.py  test_ingestion.py  test_project.py  test_server.py  test_templates.py
wikinow/: __init__.py  cli.py  config.py  export.py  project.py  server.py  templates.py
wikinow/db/: __init__.py  schemas.py  storage.py
wikinow/ingestion/: __init__.py  audio.py  epub.py  jina.py  pdf.py  text.py  youtube.py
wikinow/search/: __init__.py  web.py  wiki.py
